--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,16 @@
     <head>
         <meta charset="utf-8"/>
         <title>نرم افزار چت</title>
+        <script src="/socket.io/socket.io.js"></script>
+        <script>
+            var socket = io();
+            socket.on('connect',()=>{
+                console.log("client connect!")
+            })
+            socket.on('disconnect',()=>{
+                console.log('client disconnect!')
+            })
+        </script>
     </head>
     <body>
         <h3>این نرم افزار چت است</h3>
