--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,7 @@
         <meta charset="utf-8"/>
         <title>نرم افزار چت</title>
         <script src="/socket.io/socket.io.js"></script>
-        <script>
-            var socket = io();
-            socket.on('connect',()=>{
-                console.log("client connect!")
-            })
-            socket.on('disconnect',()=>{
-                console.log('client disconnect!')
-            })
-        </script>
+        <script src="js/index.js"> </script>
     </head>
     <body>
         <h3>این نرم افزار چت است</h3>
