--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,19 @@
     <head>
         <meta charset="utf-8"/>
         <title>نرم افزار چت</title>
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="js/index.js"> </script>
     </head>
     <body>
         <h3>این نرم افزار چت است</h3>
+        
+        <ol id="messages"></ol>
+
+        <form id="message-form">
+            <input name="message" type="text" placeholder="message"/>
+            <button type="submit">send</button>
+        </form>
+
+        <script src="/js/lib/jquery-3.5.1.min.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="js/index.js"> </script>
     </body>
 </html>
