--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>نرم افزار چت</title>
-        <link rel="stylesheet" href="/css/style.css"
+        <link rel="stylesheet" href="/css/style.css"/>
     </head>
     <body class="chat">
 
@@ -26,7 +26,7 @@
     
             </div>
         </div>
-        
+        <script src="/js/lib/moment.js"></script>
         <script src="/js/lib/jquery-3.5.1.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="js/index.js"> </script>
