--- a/public/index.html
+++ b/public/index.html
@@ -2,56 +2,34 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>نرم افزار چت</title>
+        <title>ورود کاربران</title>
         <link rel="stylesheet" href="/css/style.css"/>
     </head>
-    <body class="chat">
+    <body class="centered-form" dir="rtl">
 
-        <div class="chat__sidebar">
-            <h3>People</h3>
-            <div id="users"></div>
-        </div>
-        
-        <div class="chat__main">
-            <ol id="messages" class="chat__messages"></ol>
-            
-            <div class="chat__footer">
-                <form id="message-form" >
-                    <input name="message" type="text" placeholder="message" autofocus autocomplete="false"/>
-                    <button type="submit">send</button>
-                    <button id="sendLocation">send Location</button>
-                </form>
-            </div>
-        </div>
-
-        <script id="message-template" type="text/template">
-        <div class="message">
-            <div class="message__title">
-                <h4>{{from}}</h4>
-                <span> {{createdAt}}</span>
-            </div>
-            <div class="message__body">
-                <p>{{text}}</p>
-            </div>
-        </div>
-        </script>
-
-        <script id="location-message-template" type="text/template">
-            <div class="message">
-                <div class="message__title">
-                    <h4>{{from}}</h4>
-                    <span> {{createdAt}}</span>
+        <div class="centered-form__form">
+            <form action="chat.html">
+                <div class="form-field">
+                    <h3>ورود به چت روم</h3>
                 </div>
-                <div class="message__body">
-                    <a href="{{url}}" target="_blank">My Current Location</a>
+                <div class="form-field">
+                    <label>نام شما</label>
+                    <input type="text" name="name" autofocus/>
                 </div>
-            </div>
-        </script>
+                <div class="form-field">
+                    <label>اتاق</label>
+                    <input type="text" name="room"/>
+                </div>
+                <div class="form-field">
+                    <button>ورود</button>
+                </div>
+            </form>
+        </div>
 
         <script src="/js/lib/moment.js"></script>
         <script src="/js/lib/jquery-3.5.1.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
-        <script src="js/index.js"> </script>
+        <script src="js/chat.js"> </script>
         <script src="js/lib/mustache.js"></script>
     </body>
 </html>
